# angr_ctf

./: .claude-preferences.json  .gitignore  Angr_Build_Image_Dockerfile  CLAUDE.md  README.md  compile.sh  debug_r2_utils.py  input.rr2  pyproject.toml
.clinerules/: binary-analysis-guidelines.md  dependency-management.md
00_angr_find/: README.md  claude_solution.py  generate.py  sample_debug.sh  scaffold00.py  solution.py
01_angr_avoid/: README.md  generate.py  scaffold01.py  solution.py
02_angr_find_condition/: README.md  generate.py  solution.py
03_angr_symbolic_registers/: README.md  ast_sample.py  generate.py  r2_analyze.sh  rc.r2  solution.py
04_angr_symbolic_stack/: README.md  generate.py  r2_analyze.sh  rc.r2  solution.py
05_angr_symbolic_memory/: README.md  generate.py  solution.py
06_angr_symbolic_dynamic_memory/: README.md  generate.py  solution.py
07_angr_symbolic_file/: README.md  generate.py  solution.py  solution_no_sym_file.py
08_angr_constraints/: README.md  generate.py  solution.py
09_angr_hooks/: README.md  generate.py  scaffold09.py  solution.py  solution_two_phses.py
10_angr_simprocedures/: README.md  generate.py  scaffold10.py
11_angr_sim_scanf/: README.md  generate.py  scaffold11.py
12_angr_veritesting/: README.md  generate.py  non_veritesting_solution.py  scaffold12.py
13_angr_static_binary/: README.md  generate.py  scaffold13.py
14_angr_shared_library/: README.md  generate.py  scaffold14.py
15_angr_arbitrary_read/: README.md  generate.py  solution.py  (+1 more)
angr_docker_builder/: Dockerfile  build.sh  pyproject.toml  run.sh
(+72 files in other folders)
