[project]
name = "angr-ctf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "angr>=9.2.162",
    "ipython>=8.37.0",
    "jinja2>=3.1.6",
    "langchain-core>=0.3.68",
    "mcp[cli]>=1.11.0",
    "pwntools>=4.14.1",
    "pydantic>=2.11.7",
    "rzpipe>=0.6.2",
]
